--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -180,12 +180,14 @@ android {
 
 dependencies {
 
-   implementation(project(':react-native-maps')){
-       exclude group: 'com.google.android.gms', module: 'play-services-base'
-       exclude group: 'com.google.android.gms', module: 'play-services-maps'
-   }
+//    implementation(project(':react-native-maps')){
+//        exclude group: 'com.google.android.gms', module: 'play-services-base'
+//        exclude group: 'com.google.android.gms', module: 'play-services-maps'
+//    }
    implementation 'com.google.android.gms:play-services-base:10.0.1'
    implementation 'com.google.android.gms:play-services-maps:10.0.1'
+implementation 'com.google.android.gms:play-services-location:16.0.0'
+// implementation 'com.google.android.gms:play-services-maps:16.0.0'
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
