--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
        <meta-data
      android:name="com.google.android.geo.API_KEY"
      android:value="AIzaSyB9M3BwX9Gw2h3Zb2XeVc8BHCu0Dl5v5W4"/>
+     <uses-library android:name="org.apache.http.legacy" android:required="false"/>
     </application>
 
 </manifest>
