--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.0.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-maps": "git+https://git@github.com/react-native-community/react-native-maps.git",
+    "react-native-maps-directions": "^1.8.0",
     "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
@@ -22,6 +24,7 @@
     "babel-jest": "^24.9.0",
     "eslint": "^6.8.0",
     "jest": "^24.9.0",
+    "jetifier": "^1.6.5",
     "metro-react-native-babel-preset": "^0.57.0",
     "react-test-renderer": "16.9.0"
   },
